@@ -6,6 +6,7 @@
  - Update Module::Install to 1.19 version.
  - Update author github username.
  - Update author name.
+ - Update copyright years.
 
 0.05 2016-02-20T23:27:55+01:00
  [Common]
